grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.struct_definition,
      $.enum_definition,
      $.function_definition,
      $.variable_declaration,
      $.constant_declaration,
      $.test_block,
      $.comment
    ),

    // Comments
    comment: $ => choice(
      seq('///', /.*/),
      seq('//', /.*/)
    ),

    // Identifiers
    // DEPRECATED: Use type_identifier or value_identifier instead
    // identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
    
    // Casing-specific identifiers
    // Type names and enum variants must start with uppercase
    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,
    
    // Function names, variables, fields, modules must start with lowercase or underscore
    value_identifier: $ => /[a-z_][a-zA-Z0-9_]*/,

    // Types
    type: $ => choice(
      $.primitive_type,
      $.type_identifier,
      $.tuple_type,
      $.generic_type,
      $.variadic_type,
      $.static_array_type,
      $.sized_type,
      $.function_type,
      $.type_parameter_ref  // Allow lowercase type parameters in type position
    ),

    primitive_type: $ => choice(
      'Int',
      'UInt',
      'Float',
      'Rune',
      'String',
      'Bool',
      'Void',
      'Type'
    ),

    type_parameter_ref: $ => $.value_identifier,

    generic_type: $ => prec(PREC.TYPE + 3, seq(
      $.type_identifier,
      '(',
      commaSep($.type_parameter),
      ')'
    )),

    type_parameter: $ => choice(
      $.type,
      seq($.value_identifier, $.type),  // Explicit const parameter: n Int
      seq(choice($.value_identifier, $.type_identifier), '=', $.type)  // With default: e = String
    ),

    variadic_type: $ => prec.dynamic(2, prec.left(1, seq(
      $.type,
      choice('*', '+')
    ))),

    struct_definition: $ => prec.dynamic(2, seq(
      optional($.visibility),
      $.type_identifier,
      $.struct_field_list
    )),

    struct_field_list: $ => seq(
      '(',
      optional(seq(commaSep($.type_parameter), ';')),
      optional(seq(
        alias($._field_or_param, $.struct_field),
        repeat(seq(choice(',', $._automatic_semicolon), alias($._field_or_param, $.struct_field))),
        optional(',')
      )),
      ')'
    ),

    visibility: $ => choice('+', '-'),

    _field_or_param: $ => choice(
      seq($.value_identifier, $.type),
      seq($.value_identifier, $.type, '=', $.expression),
      seq('..', $.type_identifier)
    ),

    struct_field: $ => prec.dynamic(2, choice(
      seq($.value_identifier, $.type),
      seq('..', $.type_identifier)
    )),

    // Enum definition
    enum_definition: $ => seq(
      optional($.visibility),
      $.type_identifier,
      '(',
      optional(seq(commaSep($.type_parameter), ';')),
      repeat($.enum_case),
      ')'
    ),

    enum_case: $ => choice(
      seq($.type_identifier, '(', optional(commaSep($.type)), ')'),
      $.type_identifier
    ),

    // Function definition
    function_definition: $ => prec.dynamic(3, seq(
      optional($.visibility),
      $.value_identifier,
      '(',
      optional(seq(commaSep($.type_parameter), ';')),
      optional(seq(
        alias($._field_or_param, $.parameter),
        repeat(seq(optional(','), alias($._field_or_param, $.parameter))),
        optional(',')
      )),
      ')',
      optional($.return_type),
      $.block
    )),

    parameter: $ => prec.dynamic(-1, prec(PREC.TYPE, choice(
      seq($.value_identifier, $.type),
      seq($.value_identifier, $.type, '=', $.expression)
    ))),

    return_type: $ => $.type,

    // Variable declaration
    variable_declaration: $ => seq(
      choice(
        $.value_identifier,
        // Tuple destructuring without parens: a, b := expr
        prec.dynamic(-1, seq($.value_identifier, ',', commaSep($.value_identifier)))
      ),
      choice(
        seq(':', $.type, '=', $.expression),
        prec(-1, seq(':', $.type)),  // Zero-value initialization (lower precedence to prefer longer match)
        seq(':=', $.expression)
      )
    ),

    // Constant declaration
    block: $ => seq(
      '{',
      repeat(choice($.statement, seq($.expression, optional($._semicolon)))),
      '}'
    ),

    // Semicolon: explicit or automatic
    _semicolon: $ => choice(';', $._automatic_semicolon),

    // Statements
    statement: $ => choice(
      prec(1, seq($.variable_declaration, optional($._semicolon))),  // Prefer ending with semicolon but allow without
      seq($.assignment_expression, optional($._semicolon)),
      $.match_statement
    ),



    // Match
    match_statement: $ => seq(
      'match',
      '(',
      $.expression,
      ')',
      '{',
      optional(seq(
        $.match_arm,
        repeat(seq(optional(','), $.match_arm)),
        optional(',')
      )),
      '}'
    ),

    match_arm: $ => prec.dynamic(1, seq(
      $.pattern,
      $.block
    )),

    pattern: $ => choice(
      prec.dynamic(2, seq($.type_identifier, '(', optional(commaSep($.pattern)), ')')),  // Enum destructuring - prefer this
      $.value_identifier,
      $.type_identifier,
      $.number_literal,
      $.string_literal,
      $.pattern_guard,  // Guard expressions like: b & 0xFF == 0
      $.parenthesized_expression,
      '_'
    ),

    // Pattern guards - binary expressions that can be used as patterns
    // but excluding things that could be confused with enum destructuring
    expression: $ => choice(
      $.comptime_expression,
      $.assignment_expression,
      $.binary_expression,
      $.unary_expression,
      $.call_expression,
      $.match_expression,
      $.member_match_expression,
      $.method_call,
      $.field_access,
      $.namespace_access,
      $.struct_expression,
      $.enum_expression,
      $.interpolated_string,
      // tuple_expression removed - tuples are created by comma binary operator
      $.block,
      $.parenthesized_expression,  // Moved before closure to prefer it
      $.closure,  // Moved after parenthesized_expression
      $.loop_variable,
      $.value_identifier,
      $.type_identifier,
      $.number_literal,
      $.string_literal,
      $.rune_literal
    ),

    binary_expression: $ => choice(
      ...[
        [',', PREC.COMMA],       // Tuple creation - lowest precedence
        ['||', PREC.LOGICAL_OR],
        ['&&', PREC.LOGICAL_AND],
        ['==', PREC.EQUAL],
        ['!=', PREC.EQUAL],
        ['<', PREC.COMPARE],
        ['<=', PREC.COMPARE],
        ['>', PREC.COMPARE],
        ['>=', PREC.COMPARE],
        ['|', PREC.BITWISE_OR],
        ['&', PREC.BITWISE_AND],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MULTIPLY],
        ['/', PREC.MULTIPLY],
        ['%', PREC.MULTIPLY],
        ['++', PREC.CONCAT]
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $.expression),
          operator,
          field('right', $.expression)
        ))
      )
    ),

    call_expression: $ => prec.dynamic(1, prec.right(PREC.CALL, seq(
      $.expression,
      '(',
      optional($.expression),  // Comma operator handles multiple arguments
      ')',
      optional($.block)  // Trailing closure syntax
    ))),

    member_match_expression: $ => prec(PREC.CALL, seq(
      $.expression,
      '.',
      'match',
      '(',
      ')',
      '{',
      optional(seq(
        $.match_arm,
        repeat(seq(optional(','), $.match_arm)),
        optional(',')
      )),
      '}'
    )),

    namespace_access: $ => prec(PREC.FIELD + 1, seq(
      $.expression,
      '::',
      choice($.value_identifier, $.type_identifier, '*')
    )),

    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      $.expression,
      choice('=', '+=', '-=', '*=', '/=', '%=', '<<=', '>>=', '|=', '&=', '++='),
      $.expression
    )),

    loop_variable: $ => /\$\d+/,

    interpolated_string: $ => seq(
      '"',
      optional(alias($.string_fragment, $.string_literal)),
      repeat1(seq(
        $._interpolation_start,
        $.expression,
        ')',
        optional(alias($.string_fragment, $.string_literal))
      )),
      '"'
    ),
    
    _interpolation_start: $ => $.interpolation_start,

    // Parenthesized expressions - prefer this over closure when ambiguous
    parenthesized_expression: $ => seq('(', optional($.expression), ')'),

    number_literal: $ => choice(
      /0x[0-9a-fA-F]+/,           // Hexadecimal: 0xFF, 0xDEADBEEF
      /0b[01]+/,                   // Binary: 0b1010, 0b11110000
      /\d+(\.\d+)?/                // Decimal: 123, 3.14
    ),

    // String literal without interpolation (no \( sequences)
    // Match: escaped chars (except \(), or non-quote/non-backslash chars
    string_literal: $ => token(seq(
      '"',
      repeat(choice(
        /[^"\\]+/,                    // Any char except " or \
        /\\[^(]/                      // Escape sequence except \(
      )),
      '"'
    )),

    struct_expression: $ => prec.dynamic(-1, prec(PREC.CALL - 1, seq(
      $.expression,
      '(',
      optional(commaSep($.struct_field_init)),
      ')'
    ))),

    struct_field_init: $ => seq($.value_identifier, ':', $.expression),

    enum_expression: $ => prec.left(PREC.TYPE + 2, seq(
      $.type_identifier,
      optional(seq('(', optional($.expression), ')'))  // Comma operator handles multiple args
    )),

    // Closure MUST have a block after the parameter list
    // Use dynamic precedence to prefer closure interpretation when block follows
    test_block: $ => seq(
      optional($.string_literal),
      $.block
    ),

    // Import statements
