test/corpus/statements.txt
==================
Function definitions
==================

+add(a Int, b Int) Int {
    a + b
}

---

(source_file
  (function_definition
    (visibility)
    (value_identifier)
    (parameter
      (value_identifier)
      (type
        (primitive_type)))
    (parameter
      (value_identifier)
      (type
        (primitive_type)))
    (return_type
      (type
        (primitive_type)))
    (block
      (expression
        (binary_expression
           (expression
            (value_identifier))
           (expression
            (value_identifier)))))))

==================
Struct definition
==================

+Point(x Float, y Float)

---

(source_file
  (struct_definition
    (visibility)
    (type_identifier)
    (struct_field_list
      (struct_field
        (value_identifier)
        (type
          (primitive_type)))
      (struct_field
        (value_identifier)
        (type
          (primitive_type))))))

==================
Enum definition
==================

+Result(t, e = String;
    Ok(t)
    Err(e)
)

---

(source_file
  (enum_definition
    (visibility)
    (type_identifier)
    (type_parameter
      (type
        (type_parameter_ref
          (value_identifier))))
    (type_parameter
      (value_identifier)
      (type
        (primitive_type)))
    (enum_case
      (type_identifier)
      (type
        (type_parameter_ref
          (value_identifier))))
    (enum_case
      (type_identifier)
      (type
        (type_parameter_ref
          (value_identifier))))))

==================
Variable declaration
==================

main() {
    p := Point(x: 1.0, y: 2.0)
    result := add(1, 2)
}

---

(source_file
  (function_definition
    (value_identifier)
    (block
      (statement
        (variable_declaration
          (value_identifier)
          (expression
            (struct_expression
              (expression
                (enum_expression
                  (type_identifier)))
              (struct_field_init
                (value_identifier)
                (expression
                  (number_literal)))
              (struct_field_init
                (value_identifier)
                (expression
                  (number_literal)))))))
      (statement
        (variable_declaration
          (value_identifier)
          (expression
            (call_expression
              (expression
                (value_identifier))
              (expression
                (binary_expression
                  (expression
                    (number_literal))
                  (expression
                    (number_literal)))))))))))

==================
Match statement
==================

fib(n Int) Int {
    match(n) {
        0 { 0 }
        1 { 1 }
        _ { fib(n - 1) + fib(n - 2) }
    }
}

---

(source_file
  (function_definition
    (value_identifier)
    (parameter
      (value_identifier)
      (type
        (primitive_type)))
    (return_type
      (type
        (primitive_type)))
    (block
      (statement
        (match_statement
          (expression
            (value_identifier))
          (match_arm
            (pattern
              (number_literal))
            (block
              (expression
                (number_literal))))
          (match_arm
            (pattern
              (number_literal))
            (block
              (expression
                (number_literal))))
          (match_arm
            (pattern)
            (block
              (expression
                (binary_expression
                   (expression
                    (call_expression
                      (expression
                        (value_identifier))
                      (expression
                        (binary_expression
                           (expression
                            (value_identifier))
                           (expression
                            (number_literal))))))
                   (expression
                    (call_expression
                      (expression
                        (value_identifier))
                      (expression
                        (binary_expression
                           (expression
                            (value_identifier))
                           (expression
                            (number_literal)))))))))))))))

==================
Loop statement
==================

sum(values Int*) Int {
    total := 0
    loop(values) {
        total += $0
    }
    total
}

---

(source_file
  (function_definition
    (value_identifier)
    (parameter
      (value_identifier)
      (type
        (variadic_type
          (type
            (primitive_type)))))
    (return_type
      (type
        (primitive_type)))
    (block
      (statement
        (variable_declaration
          (value_identifier)
          (expression
            (number_literal))))
      (statement
        (expression_statement
          (expression
            (call_expression
              (expression
                (value_identifier))
              (expression
                (value_identifier))
              (block
                (expression
                  (assignment_expression
                    (expression
                      (value_identifier))
                    (expression
                      (loop_variable)))))))))
      (expression
        (value_identifier)))))

==================
Test block
==================

"Basic arithmetic" {
    assert(add(2, 3) == 5)
}

---

(source_file
  (test_block
    (string_literal)
    (block
      (expression
        (call_expression
          (expression
            (value_identifier))
          (expression
            (binary_expression
               (expression
                (call_expression
                  (expression
                    (value_identifier))
                  (expression
                    (binary_expression
                      (expression
                        (number_literal))
                      (expression
                        (number_literal))))))
               (expression
                (number_literal)))))))))

==================
Comments
==================

/// This is a doc comment
// This is a regular comment
+func() {}

---

(source_file
  (comment)
  (comment)
  (function_definition
    (visibility)
    (value_identifier)
    (block)))

==================
String interpolation
==================

greet(name String) String {
    "Hello, \(name)!"
}

---

(source_file
  (function_definition
    (value_identifier)
    (parameter
      (value_identifier)
      (type
        (primitive_type)))
    (return_type
      (type
        (primitive_type)))
    (block
      (expression
        (interpolated_string
          (string_literal)
          (interpolation_start)
          (expression
            (value_identifier))
          (string_literal))))))

==================
Generic function
==================

+unwrap(op Option(t), msg String = "default") t {
    match(op) {
        Some(inner) { inner }
        None { error(msg) }
    }
}

---

(source_file
  (function_definition
    (visibility)
    (value_identifier)
    (parameter
      (value_identifier)
      (type
        (generic_type
          (type_identifier)
          (type_parameter
            (type
              (type_parameter_ref
                (value_identifier)))))))
    (parameter
      (value_identifier)
      (type
        (primitive_type))
      (expression
        (string_literal)))
    (return_type
      (type
        (type_parameter_ref
          (value_identifier))))
    (block
      (statement
        (match_statement
          (expression
            (value_identifier))
          (match_arm
            (pattern
              (type_identifier)
              (pattern
                (value_identifier)))
            (block
              (expression
                (value_identifier))))
          (match_arm
            (pattern
              (type_identifier))
            (block
              (expression
                (call_expression
                  (expression
                    (value_identifier))
                  (expression
                    (value_identifier)))))))))))


==================
UFCS match statement
==================

+exit(status ExitCode) {
    cstdlib::exit(status.match() { Success { 0 }, Failure { 1 } })
}

---

(source_file
  (function_definition
    (visibility)
    (value_identifier)
    (parameter
      (value_identifier)
      (type
        (type_identifier)))
    (block
      (expression
        (call_expression
          (expression
            (namespace_access
              (expression
                (value_identifier))
              (value_identifier)))
          (expression
            (member_match_expression
              (expression
                (value_identifier))
              (match_arm
                (pattern
                  (type_identifier))
                (block
                  (expression
                    (number_literal))))
              (match_arm
                (pattern
                  (type_identifier))
                (block
                  (expression
                    (number_literal)))))))))))

==================
Error function call
==================

+assert(condition Bool) {
    match(condition) {
        True { }
        False { error("Assertion failed!") }
    }
}

---

(source_file
  (function_definition
    (visibility)
    (value_identifier)
    (parameter
      (value_identifier)
      (type
        (primitive_type)))
    (block
      (statement
        (match_statement
          (expression
            (value_identifier))
          (match_arm
            (pattern
              (type_identifier))
            (block))
          (match_arm
            (pattern
              (type_identifier))
            (block
              (expression
                (call_expression
                  (expression
                    (value_identifier))
                  (expression
                    (string_literal)))))))))))


==================
Using enum cases as arguments
==================
/// Prints the error message and quits
+error(msg String) {
    print(msg, Fatal);
    exit(Failure)
}

---

(source_file
  (comment)
  (function_definition
    (visibility)
    (value_identifier)
    (parameter
      (value_identifier)
      (type
        (primitive_type)))
    (block
      (statement
        (expression_statement
          (expression
            (call_expression
              (expression
                (value_identifier))
              (expression
                (binary_expression
                  (expression
                    (value_identifier))
                  (expression
                    (enum_expression
                      (type_identifier)))))))))
      (expression
        (call_expression
          (expression
            (value_identifier))
          (expression
            (enum_expression
              (type_identifier))))))))

==================
Comma operator - parenthesized single value vs tuple
==================

test() {
    a := (5)
    b := (1, 2)
    c := (1, 2, 3)
}

---

(source_file
  (function_definition
    (value_identifier)
    (block
      (statement
        (variable_declaration
          (value_identifier)
          (expression
            (parenthesized_expression
              (expression
                (number_literal))))))
      (statement
        (variable_declaration
          (value_identifier)
          (expression
            (parenthesized_expression
              (expression
                (binary_expression
                  (expression
                    (number_literal))
                  (expression
                    (number_literal))))))))
      (statement
        (variable_declaration
          (value_identifier)
          (expression
            (parenthesized_expression
              (expression
                (binary_expression
                  (expression
                    (binary_expression
                      (expression
                        (number_literal))
                      (expression
                        (number_literal))))
                  (expression
                    (number_literal)))))))))))

==================
Comma operator - unparenthesized tuple in assignment
==================

test() {
    a, b := get_pair()
    x, y, z := 1, 2, 3
}

---

(source_file
  (function_definition
    (value_identifier)
    (block
      (statement
        (variable_declaration
          (value_identifier)
          (value_identifier)
          (expression
            (call_expression
              (expression
                (value_identifier))))))
      (statement
        (variable_declaration
          (value_identifier)
          (value_identifier)
          (value_identifier)
          (expression
            (binary_expression
              (expression
                (binary_expression
                  (expression
                    (number_literal))
                  (expression
                    (number_literal))))
              (expression
                (number_literal)))))))))

==================
Comma operator - function calls with tuples
==================

test() {
    foo()
    bar(1)
    baz(1, 2)
    qux(1, 2, 3, 4)
}

---

(source_file
  (function_definition
    (value_identifier)
    (block
      (statement
        (expression_statement
          (expression
            (call_expression
              (expression
                (value_identifier))))))
      (statement
        (expression_statement
          (expression
            (call_expression
              (expression
                (value_identifier))
              (expression
                (number_literal))))))
      (statement
        (expression_statement
          (expression
            (call_expression
              (expression
                (value_identifier))
              (expression
                (binary_expression
                  (expression
                    (number_literal))
                  (expression
                    (number_literal))))))))
      (expression
        (call_expression
          (expression
            (value_identifier))
          (expression
            (binary_expression
              (expression
                (binary_expression
                  (expression
                    (binary_expression
                      (expression
                        (number_literal))
                      (expression
                        (number_literal))))
                  (expression
                    (number_literal))))
              (expression
                (number_literal)))))))))

==================
Comma operator - nested tuples
==================

test() {
    nested := ((1, 2), (3, 4))
    triple := (a, (b, c), d)
}

---

(source_file
  (function_definition
    (value_identifier)
    (block
      (statement
        (variable_declaration
          (value_identifier)
          (expression
            (parenthesized_expression
              (expression
                (binary_expression
                  (expression
                    (parenthesized_expression
                      (expression
                        (binary_expression
                          (expression
                            (number_literal))
                          (expression
                            (number_literal))))))
                  (expression
                    (parenthesized_expression
                      (expression
                        (binary_expression
                          (expression
                            (number_literal))
                          (expression
                            (number_literal))))))))))))
      (statement
        (variable_declaration
          (value_identifier)
          (expression
            (parenthesized_expression
              (expression
                (binary_expression
                  (expression
                    (binary_expression
                      (expression
                        (value_identifier))
                      (expression
                        (parenthesized_expression
                          (expression
                            (binary_expression
                              (expression
                                (value_identifier))
                              (expression
                                (value_identifier))))))))
                  (expression
                    (value_identifier)))))))))))

==================
Comma operator - tuple as block final expression
==================

test() {
    {
        a, b
    }
}

---

(source_file
  (function_definition
    (value_identifier)
    (block
      (expression
        (block
          (expression
            (binary_expression
              (expression
                (value_identifier))
              (expression
                (value_identifier)))))))))

==================
Comma operator - precedence with other operators
==================

test() {
    a := 1 + 2, 3 + 4
    b := (1 + 2, 3 * 4)
}

---

(source_file
  (function_definition
    (value_identifier)
    (block
      (statement
        (variable_declaration
          (value_identifier)
          (expression
            (binary_expression
              (expression
                (binary_expression
                  (expression
                    (number_literal))
                  (expression
                    (number_literal))))
              (expression
                (binary_expression
                  (expression
                    (number_literal))
                  (expression
                    (number_literal))))))))
      (statement
        (variable_declaration
          (value_identifier)
          (expression
            (parenthesized_expression
              (expression
                (binary_expression
                  (expression
                    (binary_expression
                      (expression
                        (number_literal))
                      (expression
                        (number_literal))))
                  (expression
                    (binary_expression
                      (expression
                        (number_literal))
                      (expression
                        (number_literal)))))))))))))
